# esp32-inky-dash-client

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
include/: app_config.h  secrets.example.h
src/: CMakeLists.txt  epd_driver.c  epd_driver.h  heartbeat.c  heartbeat.h  image_decoder.c  image_decoder.h  main.c  mqtt_config.c  mqtt_handler.c  mqtt_handler.h  provisioning.c  wifi_manager.c
